--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 node_modules/
-venv/
 .env
 .vscode/
 *.log
+.DS_Store
+
+.venv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
