--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.16.0",
+    "winston-transport": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
